# portfolio-dj

./: .gitignore  Procfile  pyproject.toml  requirements.txt
accounts/: admin.py  urls.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_project_resumeitem_alter_profile_degree.py  0003_education_experience_summary_and_more.py  0004_sentence_text.py
templates/: base.html  index.html
templates/registration/: login.html  signup.html
