[tool.poetry]
name = "portfolio-dj"
version = "0.1.0"
description = ""
authors = ["ax"]
license = "MIT"
readme = "README.md"
packages = [{include = "portfolio_dj"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
