[tool.poetry]
name = "portfolio-dj"
version = "0.1.0"
description = ""
authors = ["ax"]
license = "MIT"
readme = "README.md"
packages = [{include = "portfolio_dj"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
black = "^22.10.0"
django-stubs = "^1.13.0"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
